--- a/mainw.ui
+++ b/mainw.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1920</width>
-    <height>1080</height>
+    <width>992</width>
+    <height>572</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -29,127 +29,15 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <layout class="QGridLayout" name="gridLayout_2">
-       <item row="1" column="1">
-        <widget class="QPushButton" name="unit">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>30</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>30</width>
-           <height>30</height>
-          </size>
-         </property>
+      <layout class="QFormLayout" name="formLayout">
+       <item row="0" column="1">
+        <widget class="QCheckBox" name="movelayer">
          <property name="text">
-          <string/>
-         </property>
-         <property name="icon">
-          <iconset resource="../res.qrc">
-           <normaloff>:/res/obed.png</normaloff>:/res/obed.png</iconset>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QPushButton" name="addsloy">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>30</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>30</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="icon">
-          <iconset resource="../res.qrc">
-           <normaloff>:/res/plus.png</normaloff>:/res/plus.png</iconset>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0" colspan="4">
-        <widget class="QGroupBox" name="br_oth">
-         <property name="minimumSize">
-          <size>
-           <width>261</width>
-           <height>161</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>700</width>
-           <height>300</height>
-          </size>
-         </property>
-         <property name="title">
-          <string>Кисти</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="2">
-        <widget class="QPushButton" name="copy_but">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>30</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>30</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="icon">
-          <iconset resource="../res.qrc">
-           <normaloff>:/res/copy.png</normaloff>:/res/copy.png</iconset>
+          <string>Перемещение слоя</string>
          </property>
         </widget>
        </item>
       </layout>
-     </widget>
-    </item>
-    <item row="4" column="0">
-     <widget class="QPushButton" name="File">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="text">
-       <string>File 1</string>
-      </property>
      </widget>
     </item>
     <item row="2" column="1">
@@ -187,8 +75,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>504</width>
-         <height>272</height>
+         <width>239</width>
+         <height>151</height>
         </rect>
        </property>
        <layout class="QGridLayout" name="gridLayout_3">
@@ -218,20 +106,32 @@
        <bool>false</bool>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(255, 255, 255);</string>
+       <string notr="true">background-color: rgb(156, 156, 156);</string>
       </property>
      </widget>
     </item>
     <item row="0" column="2" rowspan="2">
-     <widget class="QFrame" name="Miniholst">
+     <widget class="QFrame" name="frame">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
         <horstretch>4</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>16777215</height>
+       </size>
+      </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(255, 255, 255);</string>
+       <string notr="true"/>
       </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
@@ -239,6 +139,18 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
+      <layout class="QGridLayout" name="gridLayout_2">
+       <item row="0" column="0">
+        <widget class="QLabel" name="minicanvas">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(255, 255, 255);</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </item>
    </layout>
@@ -248,7 +160,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1920</width>
+     <width>992</width>
      <height>26</height>
     </rect>
    </property>
@@ -278,12 +190,9 @@
     <property name="title">
      <string>Слой</string>
     </property>
-    <addaction name="copy"/>
-    <addaction name="paste"/>
     <addaction name="separator"/>
     <addaction name="delmenu"/>
     <addaction name="separator"/>
-    <addaction name="clear"/>
    </widget>
    <widget class="QMenu" name="filter">
     <property name="title">
@@ -294,7 +203,6 @@
       <string>Регулировка цвета</string>
      </property>
      <addaction name="bright"/>
-     <addaction name="colr"/>
     </widget>
     <addaction name="col"/>
     <addaction name="blur"/>
@@ -305,18 +213,11 @@
     </property>
     <addaction name="glitch"/>
    </widget>
-   <widget class="QMenu" name="st">
-    <property name="title">
-     <string>Стикеры</string>
-    </property>
-    <addaction name="stadd"/>
-   </widget>
    <addaction name="file"/>
    <addaction name="holst"/>
    <addaction name="sloy"/>
    <addaction name="filter"/>
    <addaction name="eff"/>
-   <addaction name="st"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="open">
@@ -421,8 +322,8 @@
   </action>
  </widget>
  <resources>
-  <include location="../res.qrc"/>
-  <include location="../res.qrc"/>
+  <include location="res.qrc"/>
+  <include location="res.qrc"/>
  </resources>
  <connections/>
 </ui>
